---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "files": {
    "maxSize": 1024
  },
  "overrides": [
    {
      "includes": ["invalidFile.js"],
      "files": { "maxSize": 1 }
    }
  ]
}
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
